# benchmark

./: .env.example  .gitignore  README.md  judge.py  judge_llm.py  orchestrator.py  pyproject.toml  run_batch.py  run_eval.py
.github/workflows/: eval.yaml
agent/: __init__.py  agent.py  cli_registry.py  cost.py  hooks.py  prompts.py  result.py  runner.py  tools.py
official_results/: BrowserUse_0.11.5_browser_BrowserUseCloud_model_ChatBrowserUse-1.json  BrowserUse_0.11.5_browser_BrowserUseCloud_model_ChatBrowserUse-2.json  BrowserUse_0.11.5_browser_BrowserUseCloud_model_gemini-2.5-flash.json  BrowserUse_0.11.5_browser_BrowserUseCloud_model_gemini-3-flash-preview.json
skills/patchright-cli/: SKILL.md
skills/patchright-cli/references/: element-attributes.md  playwright-tests.md  running-code.md  test-generation.md  tracing.md  video-recording.md
