[project]
name = "phantom-benchmark"
version = "1.0.0"
description = "Browser automation benchmark using CLI tools + Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "certifi",
    "cryptography",
    "pydantic>=2.0",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
plots = ["matplotlib", "numpy"]

[tool.hatch.build.targets.wheel]
packages = ["."]
